BUG#21582 mysql server crashes in close_temporary_tables

the problem is described and resolved by 20919 which fix happened not to have got to
the release tree. Applying the patch of the parent bug.


sql/sql_base.cc:
  BUG#21582 mysql server crashes in close_temporary_tables
  appeared to be a dup of 20919. Applying the patch of the latter to fix this but
  in specific mysql-5.0-release tree.